# angular_bazel_bug_module_name

./: BUILD.bazel  WORKSPACE  package.json
src/myapp/: BUILD.bazel  index.html  main.ts
src/myapp/myappmodule/: BUILD.bazel  myapp.module.ts  mycomponent.ts
src/mylib/: BUILD.bazel  index.ts  mycomponent.ts
